--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-motion": "^0.4.3",
     "reactify": "^1.1.1",
     "watchify": "^3.7.0"
   },
